# afalg-engine

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  ciphers.c  digests.c  e_afalg.c  e_afalg.h
